--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
-spring.datasource.url = jdbc:mysql://http://hrms-database.cpyq8mmms9fu.eu-north-1.rds.amazonaws.com/:3306/hrms
+spring.datasource.url = jdbc:mysql://hrms-database.cpyq8mmms9fu.eu-north-1.rds.amazonaws.com:3306/hrms
 spring.datasource.username = admin
 spring.datasource.password = avisofthrms
 spring.jpa.show-sql = true
