--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,14 @@
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://hrms-database.cpyq8mmms9fu.eu-north-1.rds.amazonaws.com:3306/hrms2
+spring.datasource.url=jdbc:mysql://hrms-database.cpyq8mmms9fu.eu-north-1.rds.amazonaws.com:3306/hrms
 spring.datasource.username=admin
 spring.datasource.password=avisofthrms
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 server.port=5555
+spring.datasource.hikari.maximum-pool-size=5
+spring.mvc.cors.allowed-origins=*
+spring.mvc.cors.allowed-methods=GET,POST,PUT,DELETE,PATCH
+spring.mvc.cors.allowed-headers=*
+
