--- a/jenkinsfile
+++ b/jenkinsfile
@@ -12,7 +12,7 @@ pipeline{
         stage('Maven Build'){
             steps{
                 checkout scmGit(branches: [[name: '*/dev-server']], extensions: [], userRemoteConfigs: [[url: 'https://github.com/Himanshu241b/HRMSAvisoft']])
-                sh 'mvn clean install'
+                sh 'mvn clean install -Dmaven.test.skip=true'
             }
         }
         stage('Build docker image'){
@@ -36,11 +36,9 @@ pipeline{
             steps {
 
                     script {
-                          // SSH into EC2 instance and run commands
                     def sshCommand = "ssh -i ${SSH_CREDENTIALS_ID} ${SSH_USER}@${SSH_HOST}"
                     sshCommand += " 'docker stop \$(docker ps -q) &&  docker system prune -a --force && docker pull himanshu241b/app && docker run -p 80:5555 -d himanshu241b/app'"
 
-                    // Execute SSH command
                     sh(script: sshCommand, returnStatus: true)
 
                     }
