--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -1,5 +1,4 @@
 
-#porject config
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://hrms-database.cpyq8mmms9fu.eu-north-1.rds.amazonaws.com:3306/hrms
 spring.datasource.username=admin
@@ -9,13 +8,8 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 server.port=5555
 spring.datasource.hikari.maximum-pool-size=5
-
-#cors policy
 spring.mvc.cors.allowed-origins=*
 spring.mvc.cors.allowed-methods=GET,POST,PUT,DELETE,PATCH
 spring.mvc.cors.allowed-headers=*
 
-#cloudinary
-cloudinary.cloud_name = dbshajpgp
-cloudinary.api_key = 435238499726496
-cloudinary.api_secret = iv4cQJz8xzihy7W-kiX69Fix0RY
+offset.uploadImage.url = "http://localhost:5555/api/v1/employee/{id}/uploadImage"
