--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -13,3 +13,8 @@ spring.mvc.cors.allowed-methods=GET,POST,PUT,DELETE,PATCH
 spring.mvc.cors.allowed-headers=*
 
 offset.uploadImage.url = "http://localhost:5555/api/v1/employee/{id}/uploadImage"
+
+#cloudinary
+cloudinary.cloud_name=dbshajpgp
+cloudinary.api_key=435238499726496
+cloudinary.api_secret=iv4cQJz8xzihy7W-kiX69Fix0RY
