--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -9,8 +9,9 @@ spring.jpa.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 server.port=5555
 spring.datasource.hikari.maximum-pool-size=5
 
-
-offset.uploadImage.url = "http://localhost:5555/api/v1/employee/{id}/uploadImage"
+#test urls
+offset.uploadImage.url = "http://localhost:5555/api/v1/employee/2L/uploadImage"
+offset.searchEmployee.url = "http://localhost:5555/api/v1/employee/searchEmployee?name=avinash"
 
 #cloudinary
 cloudinary.cloud_name=dbshajpgp
