--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -10,8 +10,8 @@ server.port=5555
 spring.datasource.hikari.maximum-pool-size=5
 
 #test urls
-offset.uploadImage.url = "http://localhost:5555/api/v1/employee/2L/uploadImage"
-offset.searchEmployee.url = "http://localhost:5555/api/v1/employee/searchEmployee?name=avinash"
+offset.uploadImage.url=http://localhost:5555/api/v1/employee/2L/uploadImage
+searchEmployee.url=http://localhost:5555/api/v1/employee/searchEmployee
 
 #cloudinary
 cloudinary.cloud_name=dbshajpgp
