--- a/pom.xml
+++ b/pom.xml
@@ -89,7 +89,11 @@
 			<version>3.12.4</version> <!-- Replace with the latest version -->
 			<scope>test</scope>
 		</dependency>
-
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-validation</artifactId>
+			<version>3.2.5</version>
+		</dependency>
 	</dependencies>
 
 	<build>
