controller tests added

--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -1,18 +1,13 @@
 
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://hrms-database.cpyq8mmms9fu.eu-north-1.rds.amazonaws.com:3306/hrms
-spring.datasource.username=admin
-spring.datasource.password=avisofthrms
-spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.hibernate.dialect=org.hibernate.dialect.MySQLDialect
-server.port=5555
-spring.datasource.hikari.maximum-pool-size=5
-
 #test urls
-offset.uploadImage.url=http://localhost:5555/api/v1/employee/2L/uploadImage
-searchEmployee.url=http://localhost:5555/api/v1/employee/searchEmployee
-offset.getEmergencyContacts.url = http://localhost:5555/api/v1/emergencyContact/employee/{employeeId}
+offset.uploadImage.url= /api/v1/employee/2L/uploadImage
+searchEmployee.url= /api/v1/employee/searchEmployee
+offset.getEmergencyContacts.url = /api/v1/emergencyContact/employee/{employeeId}
+offset.addEmergencyContact.url = /api/v1/emergencyContact/employee/{employeeId}
+getDepartments.url = /api/v1/department
+deleteEmergencyContact.url = /api/v1/emergencyContact/{emergencyContactId}/{employeeId}
+addDepartment.url = /api/v1/department
+deleteDepartment.url = /api/v1/department/{departmentId}
 
 #cloudinary
 cloudinary.cloud_name=dbshajpgp
