--- a/pom.xml
+++ b/pom.xml
@@ -41,8 +41,7 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
-			<scope>runtime</scope>
-			<optional>true</optional>
+			<version>3.2.5</version>
 		</dependency>
 		<dependency>
 			<groupId>com.cloudinary</groupId>
