--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -8,6 +8,11 @@ getDepartments.url = /api/v1/department
 deleteEmergencyContact.url = /api/v1/emergencyContact/{emergencyContactId}/{employeeId}
 addDepartment.url = /api/v1/department
 deleteDepartment.url = /api/v1/department/{departmentId}
+getPerformanceOfEmployee.url = /api/v1/performance/employee/{employeeId}
+addPerformanceOfEmployee.url = /api/v1/performance
+getAllPerformance.url = /api/v1/performance
+getPerformanceByReviewer.url = /api/v1/performance
+deletePerformance.url = /api/v1/performance
 
 #cloudinary
 cloudinary.cloud_name=dbshajpgp
